--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,17 @@
 ---
-layout: blog
+layout: default
 ---
+<div class="post">
 
-<article class="post">
- <div class="space-extra-small">
- </div>
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+  </header>
 
-  <div class="entry">
+  <article class="post-content">
     {{ content }}
-  </div>
+  </article>
+  
+  {% include comment.html %}
 
-  {% include disqus.html %}
-</article>
-
+</div>
